2016-05-17 Geert-Jan Besjes <geert-jan.besjes@cern.ch>
	* python/configManager.py: comment fixes
	* python/fitConfig.py: debug message for output filename
	* src/Utils.cxx: typo in GeneratePlots() printout fixed
	* scripts/HistFitter.py: run all fit configs when -f is specified, not
	just the first one
	* set svn ignore for .*.swp in all dirs

2016-05-12 Geert-Jan Besjes <geert-jan.besjes@cern.ch>
	* src/Utils.h: introduce new GeneratePlots(), which is effectively
	GenerateFitAndPlot - without the fit and a fitConfig passed. Useful for
	plotting existing afterFit workspaces
	* src/Utils.cxx: new GeneratePlots() method

2016-05-12 Geert-Jan Besjes <geert-jan.besjes@cern.ch>
	* src/Utils.h: new 'noFit' option for GenerateFitAndPlot
	* src/Utils.cxx: allow GenerateFitAndPlot to recycle afterFit workspace
	* scripts/HistFitter.py: call GenerateFitAndPlotCPP even if -f not
	specified; set the noFit flag in this case

2016-05-12 Geert-Jan Besjes <geert-jan.besjes@cern.ch>
	* src/Utils.cxx: write out nll curve in ROOT file, not just plots 

2016-05-11 Geert-Jan Besjes <geert-jan.besjes@cern.ch>
	* scripts/HistFitter.py: allow 'all' as shorthand for 'allPlots'. Fix
	multiline fatal message.

2016-05-11 Geert-Jan Besjes <geert-jan.besjes@cern.ch>
	* src/Utils.cxx: use C++ casts in fit method. Check that our data actually
	exists; throw fatal in case data is absent. (Points to a misuse of blinded
	fits typically.)

2015-12-14 Sophio Pataraia <sophio.pataraia@cern.ch>
	* fixed shape systematics reset function (src/Utils.cxx)
        * fixed channel setWeights function (python/fitConfig.py)

2015-12-01 Geert-Jan Besjes <geert-jan.besjes@cern.ch>
	* Port back enableDetailedOutput setting for HypoTestTool from ROOT
	example

2015-11-30 Geert-Jan Besjes <geert-jan.besjes@cern.ch>
	* scripts/UpperLimitTable.py
	* scripts/UpperLimitTableTex.py
	* Don't use a weird list but use a dictionary as intermediate holder of
	results
	* Write out significance of p-value as well