@@ -317,10 +317,10 @@ class ConfigManager(object):
                     lowName    = "h%sLow_%s_obs_%s" % (sam.name, regString, replaceSymbols(chan.variableName))
 
                     if sam.isData:
-                        if (self.blindSR and (chan.channelName in tl.signalChannels)) or \
+                        if chan.blind or \
+                           (self.blindSR and (chan.channelName in tl.signalChannels)) or \
                            (self.blindCR and (chan.channelName in tl.bkgConstrainChannels)) or \
-                           (self.blindVR and (chan.channelName in tl.validationChannels)) or \
-                           (chan.doBlindingOverwrite):
+                           (self.blindVR and (chan.channelName in tl.validationChannels)):
                             sam.blindedHistName = "h%s%sBlind_%s_obs_%s" % (tl.name, sam.name, regString,
                                                                             replaceSymbols(chan.variableName))
                             if not sam.blindedHistName in self.hists.keys():
@@ -1186,27 +1186,37 @@ class ConfigManager(object):
         histoName = "h%s_%s_obs_%s" % (sam.name, regionString, replaceSymbols(chan.variableName) )
 
         if sam.isData:
-            if chan.channelName in fitConfig.signalChannels:
-                if self.blindSR:
-                    chan.addData(sam.blindedHistName)
-                else:
-                    self.prepare.addHisto(histoName, useOverflow=chan.useOverflowBin, useUnderflow=chan.useUnderflowBin)
-                    chan.addData(histoName)
-            elif chan.channelName in fitConfig.bkgConstrainChannels:
-                if self.blindCR:
-                    chan.addData(sam.blindedHistName)
-                else:
-                    self.prepare.addHisto(histoName, useOverflow=chan.useOverflowBin, useUnderflow=chan.useUnderflowBin)
-                    chan.addData(histoName)
-            elif chan.channelName in fitConfig.validationChannels:
-                if self.blindVR or chan.doBlindingOverwrite:
-                    chan.addData(sam.blindedHistName)
-                else:
-                    self.prepare.addHisto(histoName, useOverflow=chan.useOverflowBin, useUnderflow=chan.useUnderflowBin)
-                    chan.addData(histoName)
+            if chan.blind or \
+               (self.blindSR and (chan.channelName in fitConfig.signalChannels)) or \
+               (self.blindCR and chan.channelName in fitConfig.bkgConstrainChannels) or \
+               (self.blindVR and (chan.channelName in fitConfig.validationChannels)):
+                log.info("Using blinded data for channel {0} for sample {1}".format(chan.name, sam.name)) 
+                chan.addData(sam.blindedHistName)
             else:
                 self.prepare.addHisto(histoName, useOverflow=chan.useOverflowBin, useUnderflow=chan.useUnderflowBin)
                 chan.addData(histoName)
+
+            #if chan.channelName in fitConfig.signalChannels:
+                #if self.blindSR:
+                    #chan.addData(sam.blindedHistName)
+                #else:
+                    #self.prepare.addHisto(histoName, useOverflow=chan.useOverflowBin, useUnderflow=chan.useUnderflowBin)
+                    #chan.addData(histoName)
+            #elif chan.channelName in fitConfig.bkgConstrainChannels:
+                #if self.blindCR:
+                    #chan.addData(sam.blindedHistName)
+                #else:
+                    #self.prepare.addHisto(histoName, useOverflow=chan.useOverflowBin, useUnderflow=chan.useUnderflowBin)
+                    #chan.addData(histoName)
+            #elif chan.channelName in fitConfig.validationChannels:
+                #if self.blindVR or chan.blind:
+                    #chan.addData(sam.blindedHistName)
+                #else:
+                    #self.prepare.addHisto(histoName, useOverflow=chan.useOverflowBin, useUnderflow=chan.useUnderflowBin)
+                    #chan.addData(histoName)
+            #else:
+                #self.prepare.addHisto(histoName, useOverflow=chan.useOverflowBin, useUnderflow=chan.useUnderflowBin)
+                #chan.addData(histoName)
         elif not sam.isQCD and not sam.isDiscovery:
             tmpName="h"+sam.name+"Nom_"+regionString+"_obs_"+replaceSymbols(chan.variableName)
             if not len(sam.shapeFactorList):
@@ -1331,10 +1341,10 @@ class ConfigManager(object):
         @param chan The channel
         @param sam The sample
         """
-        if (self.blindSR and (chan.channelName in fitConfig.signalChannels)) or \
+        if chan.blind or \
+           (self.blindSR and (chan.channelName in fitConfig.signalChannels)) or \
            (self.blindCR and chan.channelName in fitConfig.bkgConstrainChannels) or \
-           (self.blindVR and (chan.channelName in fitConfig.validationChannels)) or \
-           (chan.doBlindingOverwrite):
+           (self.blindVR and (chan.channelName in fitConfig.validationChannels)):
             if not self.hists[sam.blindedHistName]:
                 self.hists[sam.blindedHistName] = TH1F(sam.blindedHistName,sam.blindedHistName,chan.nBins,chan.binLow,chan.binHigh)
 
